--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.1",
     "@types/styled-components": "^5.1.9"
   }
 }
