chore: add dayjs

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "bxd": "^1.0.0-rc.2",
+    "dayjs": "^1.10.4",
     "framer-motion": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
